saperate the tool bar and custom ex render page

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,31 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Web Accessibility Improvement Services</title>
+    <style>
+      #body ul {
+        color: tomato;
+      }
+
+      #body div {
+        border: 1px solid red;
+      }
+
+      #body p {
+        background-color: darkorange;
+      }
+
+      #body button {
+        color:deeppink;
+      }
+
+      #body table {
+        border: 2px solid sienna;
+      }
+
+      #body table td, tr {
+        background-color: aqua;
+      }
+    </style>
   </head>
   <body>
     <!-- 렌더링 부분 -->
